retrocrisps_db_inspect.txt
C:\Users\bruce\Documents\Clients\Fandom\inspect-retrocrisps.ts:2
import { MongoService } from './server/services/mongoService.js';
         ^

SyntaxError: The requested module './server/services/mongoService.js' does not provide an export named 'MongoService'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:363:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:683:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.7.0
